<resources>

    <string name="vendor_name">鑫亿软件</string>
    <string name="app_version">Version: %1$s</string>
    <string name="app_name">鑫亿医疗移动平台</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="logon_username">用户名</string>
    <string name="logon_password">密码</string>
    <string name="logon_save_passwrod">记住密码</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_activity_main">鑫亿医疗移动平台</string>
    <string name="title_activity_logon">鑫亿医疗移动平台:用户登录</string>
    <string name="common_settings">参数</string>
    <string name="title_setting_preference">平台参数设置</string>
    <string name="summary_setting_preference">参数设置</string>
    <string name="setting_use_voice">启用语音提示</string>

    <string name="B1">1</string>
    <string name="B2">2</string>
    <string name="B3">3</string>
    <string name="B4">4</string>
    <string name="B5">5</string>
    <string name="B6">6</string>
    <string name="B7">7</string>
    <string name="B8">8</string>
    <string name="B9">9</string>
    <string name="B0">0</string>
    <string name="Dot">.</string>
    <string name="Eq">=</string>
    <string name="Clear">清空</string>
    <string name="sum">+</string>
    <string name="dif">-</string>
    <string name="mul">x</string>
    <string name="div">/</string>
    <string name="Empty">0</string>
    <string name="Close">关闭</string>
    <string name="Delete">删除</string>

    <string name="onBed">卧床</string>

    <string name="dialogabout_about">鑫亿移动平台.\n\n谢谢使用!</string>

    <!-- DeviceListActivity -->
    <string name="scanning">扫描蓝牙设备...</string>
    <string name="select_device">选择连接设备</string>
    <string name="none_paired">没有配对设备</string>
    <string name="none_found">没找到设备</string>
    <string name="title_paired_devices">已存在的配对设备</string>
    <string name="title_other_devices">有效设备</string>
    <string name="button_scan">开始扫描设备</string>

    <string name="user_update_pwd">用户更改密码</string>
</resources>