<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Foot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="@color/white"
    android:orientation="horizontal"
    android:stretchColumns="0,1,2,3" >

    <View
        android:layout_height="0dp"
        android:background="#FF909090" />

    <TableRow
        android:id="@+id/TableRow01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button6"
            android:layout_width="@dimen/ButtonSize"
            android:layout_height="@dimen/ButtonSize"
            android:text="@string/B6"
            android:textSize="@dimen/TextSize" />

        <Button
            android:id="@+id/button7"
            android:layout_width="@dimen/ButtonSize"
            android:layout_height="@dimen/ButtonSize"
            android:text="@string/B7"
            android:textSize="@dimen/TextSize" />

        <Button
            android:id="@+id/button8"
            android:layout_width="@dimen/ButtonSize"
            android:layout_height="@dimen/ButtonSize"
            android:text="@string/B8"
            android:textSize="@dimen/TextSize" />

        <Button
            android:id="@+id/button9"
            android:layout_width="@dimen/ButtonSize"
            android:layout_height="@dimen/ButtonSize"
            android:text="@string/B9"
            android:textSize="@dimen/TextSize" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow
        android:id="@+id/TableRow02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/ButtonSize"
            android:layout_height="@dimen/ButtonSize"
            android:text="@string/B2"
            android:textSize="@dimen/TextSize" />

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/ButtonSize"
            android:layout_height="@dimen/ButtonSize"
            android:text="@string/B3"
            android:textSize="@dimen/TextSize" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/ButtonSize"
            android:layout_height="@dimen/ButtonSize"
            android:text="@string/B4"
            android:textSize="@dimen/TextSize" />

        <Button
            android:id="@+id/button5"
            android:layout_width="@dimen/ButtonSize"
            android:layout_height="@dimen/ButtonSize"
            android:text="@string/B5"
            android:textSize="@dimen/TextSize" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow
        android:id="@+id/TableRow03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button0"
            android:layout_width="@dimen/ButtonSize"
            android:layout_height="@dimen/ButtonSize"
            android:text="@string/B0"
            android:textSize="@dimen/TextSize" />

        <Button
            android:id="@+id/button1"
            android:layout_width="@dimen/ButtonSize"
            android:layout_height="@dimen/ButtonSize"
            android:text="@string/B1"
            android:textSize="@dimen/TextSize" />

        <Button
            android:id="@+id/buttonDot"
            android:layout_width="@dimen/ButtonSize"
            android:layout_height="@dimen/ButtonSize"
            android:text="@string/Dot"
            android:textSize="@dimen/TextSize" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="@dimen/ButtonSize"
            android:layout_height="@dimen/ButtonSize"
            android:layout_marginTop="-2.7dp"
            android:text="@string/Delete"
            android:textColor="@color/opaque_red"
            android:textSize="@dimen/TextSizeSureButton" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow
        android:id="@+id/TableRow04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonEq"
            android:layout_width="@dimen/ButtonSize"
            android:layout_height="@dimen/ButtonSize"
            android:text="@string/ok"
            android:textColor="@color/lime"
            android:textSize="@dimen/TextSizeSureButton" />

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="@dimen/ButtonSize"
            android:layout_height="@dimen/ButtonSize"
            android:text="@string/Close"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSizeCloseButton" />

        <Button
            android:id="@+id/Button01"
            android:layout_width="@dimen/ButtonSize"
            android:layout_height="@dimen/ButtonSize"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSizeSureButton"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonOnBed"
            android:layout_width="@dimen/ButtonSize"
            android:layout_height="@dimen/ButtonSize"
            android:text="@string/onBed"
            android:textColor="@color/black"
            android:textSize="@dimen/TextSizeSureButton" />
    </TableRow>

</TableLayout>